--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
     <center>
       <div class="header-nav-content slide">
         <p>Hi I am Leonel Esguerra and I am</p>
-        <h1 class="linear-wipe">Frontend Web <span class="gradient-text">Developer</span> and UI/UX <span class="gradient-text">Designer</span></h1>
+        <h1 class="linear-wipe">Frontend Web <span class="gradient-text2">Developer</span> and UI/UX <span class="gradient-text2">Designer</span></h1>
       </div>
     </center>
 
