--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <link
     rel="icon"
-    type="image/webp"
+    type="image/svg"
     href="images/Personal Website-Advance Logo.svg"
   />
   <title>About | Leonel Esguerra</title>
@@ -60,7 +60,10 @@
     <center>
       <div class="header-nav-content slide">
         <p>Hi I am Leonel Esguerra and I am</p>
-        <h1 class="linear-wipe">Frontend Web <span class="gradient-text2">Developer</span> and UI/UX <span class="gradient-text2">Designer</span></h1>
+        <h1 class="linear-wipe">
+          Frontend Web <span class="gradient-text2">Developer</span> and UI/UX
+          <span class="gradient-text2">Designer</span>
+        </h1>
       </div>
     </center>
 
@@ -71,7 +74,10 @@
           alt=""
           class="scroll-element js-scroll slide-left"
         />
-        <span class="scroll-caption scroll-element js-scroll fade-in" style="color: gray; font-weight: 50;">
+        <span
+          class="scroll-caption scroll-element js-scroll fade-in"
+          style="color: gray; font-weight: 50"
+        >
           <br /><br />
           I currently live here in Laguna, Philippines. I studied Bachelor of
           Science in Computer Science. For the past four years of studying
@@ -113,39 +119,52 @@
       </section>
 
       <center>
-      <div style="margin-top: 60px;">
-      <p class="js-scroll fade-in" style="font-weight: 700; margin-bottom: 20px;">FAVORITE TOOLS</p>
-      <div class="img2 js-scroll fade-in">
-        <li><img src="images/figma.webp" alt="" /></li>
-        <li><img src="images/canva.webp" alt="" /></li>
-        <li><img src="images/wordpress.png" alt="" /></li>
-        <li><img src="images/elementor.png" alt="" /></li>
-        <li><img src="images/vscode.webp" alt="" /></li>
-        <li><img src="images/github-white.webp" alt="" /></li>
-        <li><img src="images/xampp.webp" alt="" /></li>
-        <li><img src="images/phpmyadmin.webp" alt="" /></li>
-      </div>
-      <p class="js-scroll fade-in" style="font-weight: 700; margin-bottom: 20px;">
-        FAVORITE WEB DEVELOPMENT LANGUAGES, FRAMEWORKS AND DATABASES
-      </p>
-      <div class="img2 js-scroll fade-in">
-        <li><img src="images/html.webp" alt="" /></li>
-        <li><img src="images/css.webp" alt="" /></li>
-        <li><img src="images/javascript.webp" alt="" /></li>
-        <li><img src="images/jquery.webp" alt="" /></li>
-        <li><img src="images/laravel.webp" alt="" /></li>
-        <li><img src="images/react.webp" alt="" /></li>
-        <li><img src="images/bootstrap.webp" alt="" /></li>
-        <li><img src="images/php.webp" alt="" /></li>
-        <li><img src="images/mysql.webp" alt="" /></li>
-        <li><img src="images/firebase.webp" alt="" /></li>
-      </div>
-      </div>
+        <div style="margin-top: 60px">
+          <p
+            class="js-scroll fade-in"
+            style="font-weight: 700; margin-bottom: 20px"
+          >
+            FAVORITE TOOLS
+          </p>
+          <div class="img2 js-scroll fade-in">
+            <li><img src="images/figma.webp" alt="" /></li>
+            <li><img src="images/canva.webp" alt="" /></li>
+            <li><img src="images/wordpress.png" alt="" /></li>
+            <li><img src="images/elementor.png" alt="" /></li>
+            <li><img src="images/vscode.webp" alt="" /></li>
+            <li><img src="images/github-white.webp" alt="" /></li>
+            <li><img src="images/xampp.webp" alt="" /></li>
+            <li><img src="images/phpmyadmin.webp" alt="" /></li>
+          </div>
+          <p
+            class="js-scroll fade-in"
+            style="font-weight: 700; margin-bottom: 20px"
+          >
+            FAVORITE WEB DEVELOPMENT LANGUAGES, FRAMEWORKS AND DATABASES
+          </p>
+          <div class="img2 js-scroll fade-in">
+            <li><img src="images/html.webp" alt="" /></li>
+            <li><img src="images/css.webp" alt="" /></li>
+            <li><img src="images/javascript.webp" alt="" /></li>
+            <li><img src="images/jquery.webp" alt="" /></li>
+            <li><img src="images/laravel.webp" alt="" /></li>
+            <li><img src="images/react.webp" alt="" /></li>
+            <li><img src="images/bootstrap.webp" alt="" /></li>
+            <li><img src="images/php.webp" alt="" /></li>
+            <li><img src="images/mysql.webp" alt="" /></li>
+            <li><img src="images/firebase.webp" alt="" /></li>
+          </div>
+        </div>
       </center>
 
       <div
-      style="border: 1px solid white; margin-top: 100px; margin-bottom: 80px; opacity: 40%;"
-    ></div>
+        style="
+          border: 1px solid white;
+          margin-top: 100px;
+          margin-bottom: 80px;
+          opacity: 40%;
+        "
+      ></div>
 
       <div class="footer slide">
         <center>
