--- a/designs.html
+++ b/designs.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <link
     rel="icon"
-    type="image/webp"
+    type="image/svg"
     href="images/Personal Website-Advance Logo.svg"
   />
   <title>Designs | Leonel Esguerra</title>
@@ -70,7 +70,7 @@
               href="https://www.behance.net/gallery/161829513/Coin-World-Cryptocurrency-UIUX-Mockups"
               target="_blank"
             >
-            <img src="images/coin-world.png" alt="" class="zoom" />
+              <img src="images/coin-world.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
@@ -181,7 +181,12 @@
     </div>
 
     <div
-      style="border: 1px solid white; margin-top: 100px; margin-bottom: 80px; opacity: 40%;"
+      style="
+        border: 1px solid white;
+        margin-top: 100px;
+        margin-bottom: 80px;
+        opacity: 40%;
+      "
     ></div>
 
     <div class="footer slide">
