--- a/case-study.html
+++ b/case-study.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <link
     rel="icon"
-    type="image/webp"
+    type="image/svg"
     href="images/Personal Website-Advance Logo.svg"
   />
   <title>Case Studies | Leonel Esguerra</title>
@@ -80,7 +80,12 @@
     </div>
 
     <div
-      style="border: 1px solid white; margin-top: 100px; margin-bottom: 80px; opacity: 40%;"
+      style="
+        border: 1px solid white;
+        margin-top: 100px;
+        margin-bottom: 80px;
+        opacity: 40%;
+      "
     ></div>
 
     <div class="footer slide">
