--- a/dmis.html
+++ b/dmis.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <link
     rel="icon"
-    type="image/webp"
+    type="image/svg"
     href="images/Personal Website-Advance Logo.svg"
   />
   <title>DMIS</title>
@@ -14,7 +14,7 @@
   <meta name="author" content="Leonel Esguerra" />
 
   <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
+  <head> </head>
   <body>
     <div class="header">
       <li class="logo">
@@ -59,39 +59,71 @@
 
     <center>
       <div class="header-case slide">
-      <h1 style="margin-bottom: 20px;">DOST-FPRDI OD-PS Document Management Information System</h1>
-      <h6>DOST-FPRDI - Office of the Director - Planning Staff - Document
-        Management Information System is a system project during the 300 hours
-        on-the-job training. The system can store the incoming and outgoing
-        documents, can search a particular documents and categorize the document
-        based on the physical cabinet in the office.
-      </h6>
-    </div>
+        <h1 style="margin-bottom: 20px">
+          DOST-FPRDI OD-PS Document Management Information System
+        </h1>
+        <h6>
+          DOST-FPRDI - Office of the Director - Planning Staff - Document
+          Management Information System is a system project during the 300 hours
+          on-the-job training. The system can store the incoming and outgoing
+          documents, can search a particular documents and categorize the
+          document based on the physical cabinet in the office.
+        </h6>
+      </div>
 
-      <div class="header-full slide js-scroll fade-in-bottom" style="margin-top: 100px;">
+      <div
+        class="header-full slide js-scroll fade-in-bottom"
+        style="margin-top: 100px"
+      >
         <img src="images/dmis-case.png" alt="" class="zoom" />
       </div>
     </center>
-    
+
     <section class="scroll-container">
-        <img src="images/color-dmis.webp" alt="" class="scroll-element js-scroll fade-in-bottom"/>
-        <h1 class="scroll-caption js-scroll fade-in">Color Exploration<br><br>
-            <span>The prime color of the system is dark and white. It is helpful for the admin if they are not comfortable in the very light system. The system has a gray color that balanced the visual of the system.</span>
-        </h1>
+      <img
+        src="images/color-dmis.webp"
+        alt=""
+        class="scroll-element js-scroll fade-in-bottom"
+      />
+      <h1 class="scroll-caption js-scroll fade-in">
+        Color Exploration<br /><br />
+        <span
+          >The prime color of the system is dark and white. It is helpful for
+          the admin if they are not comfortable in the very light system. The
+          system has a gray color that balanced the visual of the system.</span
+        >
+      </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/nunito.webp" alt="" class="scroll-element js-scroll fade-in-bottom"/>
-        <h1 class="scroll-caption js-scroll fade-in">Typography<br><br>
-            <span>Nunito is a well-balanced sans serif typeface superfamily. It is a default Jetstream font which is one of the plugins for Laravel Frameworks and it is usually used in the web system.</span>
-        </h1>
+      <img
+        src="images/nunito.webp"
+        alt=""
+        class="scroll-element js-scroll fade-in-bottom"
+      />
+      <h1 class="scroll-caption js-scroll fade-in">
+        Typography<br /><br />
+        <span
+          >Nunito is a well-balanced sans serif typeface superfamily. It is a
+          default Jetstream font which is one of the plugins for Laravel
+          Frameworks and it is usually used in the web system.</span
+        >
+      </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/dmis-logo.webp" alt="" class="scroll-element js-scroll fade-in-bottom"/>
-        <h1 class="scroll-caption js-scroll fade-in">Logo<br><br>
-            <span>This is the original Logo of DOST-FPRDI. The logo combination is from DOST and FPRDI when the time FPRDI was under by DOST.</span>
-        </h1>
+      <img
+        src="images/dmis-logo.webp"
+        alt=""
+        class="scroll-element js-scroll fade-in-bottom"
+      />
+      <h1 class="scroll-caption js-scroll fade-in">
+        Logo<br /><br />
+        <span
+          >This is the original Logo of DOST-FPRDI. The logo combination is from
+          DOST and FPRDI when the time FPRDI was under by DOST.</span
+        >
+      </h1>
     </section>
 
     <center>
@@ -132,51 +164,56 @@
     </center>
 
     <div
-      style="border: 1px solid white; margin-top: 100px; margin-bottom: 80px; opacity: 40%;"
+      style="
+        border: 1px solid white;
+        margin-top: 100px;
+        margin-bottom: 80px;
+        opacity: 40%;
+      "
     ></div>
-    
+
     <div class="footer slide">
-        <center>
-          <h2>Let's Connect</h2>
-          <div class="img3">
-            <li>
-              <a href="https://www.facebook.com/nhelez04" target="_blank">
-                <img src="images/fb.webp" alt="" class="slideanim" />
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/nhel_ez/" target="_blank">
-                <img src="images/instagram.webp" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
-                <img src="images/gmail.webp" alt="" />
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.linkedin.com/in/leonel-esguerra-3a0801211"
-                target="_blank"
-              >
-                <img src="images/linkedin.webp" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="https://www.behance.net/leonelesguerra" target="_blank">
-                <img src="images/behance.webp" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/nhel-ez" target="_blank">
-                <img src="images/github-white.webp" alt="" />
-              </a>
-            </li>
-          </div>
-          <p style="font-size: 12px">
-            Copyright © 2023 Leonel Esguerra. All right reserved.
-          </p>
-        </center>
+      <center>
+        <h2>Let's Connect</h2>
+        <div class="img3">
+          <li>
+            <a href="https://www.facebook.com/nhelez04" target="_blank">
+              <img src="images/fb.webp" alt="" class="slideanim" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/nhel_ez/" target="_blank">
+              <img src="images/instagram.webp" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
+              <img src="images/gmail.webp" alt="" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/leonel-esguerra-3a0801211"
+              target="_blank"
+            >
+              <img src="images/linkedin.webp" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/leonelesguerra" target="_blank">
+              <img src="images/behance.webp" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/nhel-ez" target="_blank">
+              <img src="images/github-white.webp" alt="" />
+            </a>
+          </li>
+        </div>
+        <p style="font-size: 12px">
+          Copyright © 2023 Leonel Esguerra. All right reserved.
+        </p>
+      </center>
     </div>
     <script src="scroll.js"></script>
   </body>
