--- a/rdro.html
+++ b/rdro.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <link
     rel="icon"
-    type="image/webp"
+    type="image/svg"
     href="images/Personal Website-Advance Logo.svg"
   />
   <title>RDRO</title>
@@ -14,7 +14,7 @@
   <meta name="author" content="Leonel Esguerra" />
 
   <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
+  <head> </head>
   <body>
     <div class="header">
       <li class="logo">
@@ -59,45 +59,93 @@
 
     <center>
       <div class="header-case slide">
-        <h1 style="margin-bottom: 20px;">Rider's Delivery Route Optimization Using A* Algorithm</h1>
-        <h6>Rider's Delivery Route Optimization Using A* Algorithm is a thesis and system application that the
-          delivery riders can find an efficient route from nearest up to the next nearest location and the logistics
+        <h1 style="margin-bottom: 20px">
+          Rider's Delivery Route Optimization Using A* Algorithm
+        </h1>
+        <h6>
+          Rider's Delivery Route Optimization Using A* Algorithm is a thesis and
+          system application that the delivery riders can find an efficient
+          route from nearest up to the next nearest location and the logistics
           company administrator can track and monitor the location of the
           delivery during working hours.
         </h6>
       </div>
 
-      <div class="header-full slide js-scroll fade-in-bottom" style="margin-top: 100px;">
+      <div
+        class="header-full slide js-scroll fade-in-bottom"
+        style="margin-top: 100px"
+      >
         <img src="images/rdro1.png" alt="" class="zoom" />
       </div>
     </center>
-    
+
     <section class="scroll-container">
-        <img src="images/color-rdro-riders.webp" alt="" class="scroll-element js-scroll fade-in-bottom"/>
-        <h1 class="scroll-caption js-scroll fade-in">Color Exploration (Riders)<br><br>
-            <span>The prime color of the delivery rider's application is Light Blue. It acts for peace and travel. It is good in the eye of the riders because of this light color. It is compatible with daily work as delivery riders.</span>
-        </h1>
+      <img
+        src="images/color-rdro-riders.webp"
+        alt=""
+        class="scroll-element js-scroll fade-in-bottom"
+      />
+      <h1 class="scroll-caption js-scroll fade-in">
+        Color Exploration (Riders)<br /><br />
+        <span
+          >The prime color of the delivery rider's application is Light Blue. It
+          acts for peace and travel. It is good in the eye of the riders because
+          of this light color. It is compatible with daily work as delivery
+          riders.</span
+        >
+      </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/color-rdro-admin.webp" alt="" class="scroll-element js-scroll fade-in-bottom"/>
-        <h1 class="scroll-caption js-scroll fade-in">Color Exploration (Admin)<br><br>
-            <span>The prime color of the admin application is Red. It represents energy and gentleness. The respondents of the study are J&T Express. The color branding of their company is red. So I decided to copy the color red and make some customizations.</span>
-        </h1>
+      <img
+        src="images/color-rdro-admin.webp"
+        alt=""
+        class="scroll-element js-scroll fade-in-bottom"
+      />
+      <h1 class="scroll-caption js-scroll fade-in">
+        Color Exploration (Admin)<br /><br />
+        <span
+          >The prime color of the admin application is Red. It represents energy
+          and gentleness. The respondents of the study are J&T Express. The
+          color branding of their company is red. So I decided to copy the color
+          red and make some customizations.</span
+        >
+      </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/open-sans.webp" alt="" class="scroll-element js-scroll fade-in-bottom"/>
-        <h1 class="scroll-caption js-scroll fade-in">Typography<br><br>
-            <span>Open Sans is an open-source humanist sans-serif typeface. It is typically used in Android Applications. So I decided to use this font because it is popular and typically used in Android Applications.</span>
-        </h1>
+      <img
+        src="images/open-sans.webp"
+        alt=""
+        class="scroll-element js-scroll fade-in-bottom"
+      />
+      <h1 class="scroll-caption js-scroll fade-in">
+        Typography<br /><br />
+        <span
+          >Open Sans is an open-source humanist sans-serif typeface. It is
+          typically used in Android Applications. So I decided to use this font
+          because it is popular and typically used in Android
+          Applications.</span
+        >
+      </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/rdro-logo.webp" alt="" class="scroll-element js-scroll fade-in-bottom"/>
-        <h1 class="scroll-caption js-scroll fade-in">Logo<br><br>
-            <span>There are two proposed logos which are the riders and the admin logo. The logo looks like a location icon with an eagle inside. Because eagle represents peace and freedom. The application wants the riders safety and valuable like an eagle that now is an endangered species that need to save and protect.</span>
-        </h1>
+      <img
+        src="images/rdro-logo.webp"
+        alt=""
+        class="scroll-element js-scroll fade-in-bottom"
+      />
+      <h1 class="scroll-caption js-scroll fade-in">
+        Logo<br /><br />
+        <span
+          >There are two proposed logos which are the riders and the admin logo.
+          The logo looks like a location icon with an eagle inside. Because
+          eagle represents peace and freedom. The application wants the riders
+          safety and valuable like an eagle that now is an endangered species
+          that need to save and protect.</span
+        >
+      </h1>
     </section>
 
     <center>
@@ -138,51 +186,56 @@
     </center>
 
     <div
-      style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
+      style="
+        border: 1px solid white;
+        margin-top: 100px;
+        margin-bottom: 80px;
+        opacity: 40%;
+      "
     ></div>
-    
+
     <div class="footer slide">
-        <center>
-          <h2>Let's Connect</h2>
-          <div class="img3">
-            <li>
-              <a href="https://www.facebook.com/nhelez04" target="_blank">
-                <img src="images/fb.webp" alt="" class="slideanim" />
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/nhel_ez/" target="_blank">
-                <img src="images/instagram.webp" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
-                <img src="images/gmail.webp" alt="" />
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.linkedin.com/in/leonel-esguerra-3a0801211"
-                target="_blank"
-              >
-                <img src="images/linkedin.webp" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="https://www.behance.net/leonelesguerra" target="_blank">
-                <img src="images/behance.webp" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/nhel-ez" target="_blank">
-                <img src="images/github-white.webp" alt="" />
-              </a>
-            </li>
-          </div>
-          <p style="font-size: 12px">
-            Copyright © 2023 Leonel Esguerra. All right reserved.
-          </p>
-        </center>
+      <center>
+        <h2>Let's Connect</h2>
+        <div class="img3">
+          <li>
+            <a href="https://www.facebook.com/nhelez04" target="_blank">
+              <img src="images/fb.webp" alt="" class="slideanim" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/nhel_ez/" target="_blank">
+              <img src="images/instagram.webp" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
+              <img src="images/gmail.webp" alt="" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/leonel-esguerra-3a0801211"
+              target="_blank"
+            >
+              <img src="images/linkedin.webp" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/leonelesguerra" target="_blank">
+              <img src="images/behance.webp" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/nhel-ez" target="_blank">
+              <img src="images/github-white.webp" alt="" />
+            </a>
+          </li>
+        </div>
+        <p style="font-size: 12px">
+          Copyright © 2023 Leonel Esguerra. All right reserved.
+        </p>
+      </center>
     </div>
     <script src="scroll.js"></script>
   </body>
