--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
               <img src="images/coin-world.png" alt="" class="zoom" />
             </a>
           </li>
+          <li class="js-scroll fade-in-bottom">
+            <a href="#" target="_blank">
+              <img src="images/jem-shop.png" alt="" class="zoom" />
+            </a>
+          </li>
           <li class="slide js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
