--- a/show-case.html
+++ b/show-case.html
@@ -74,6 +74,11 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
+            <a href="#" target="_blank">
+              <img src="images/jem-shop.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
             </a>
@@ -129,14 +134,6 @@
               target="_blank"
             >
               <img src="images/nft-web.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1132532791931287238"
-              target="_blank"
-            >
-              <img src="images/jemshop-app.webp" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
