--- a/designs.html
+++ b/designs.html
@@ -79,6 +79,11 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
+            <a href="#" target="_blank">
+              <img src="images/e-pay.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
             </a>
@@ -110,14 +115,6 @@
               target="_blank"
             >
               <img src="images/everyday-blog.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1142636028024666544"
-              target="_blank"
-            >
-              <img src="images/e-pay.webp" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
