--- a/show-case.html
+++ b/show-case.html
@@ -94,6 +94,11 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
+            <a href="#" target="_blank">
+              <img src="images/game-loop.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
             </a>
@@ -101,14 +106,6 @@
           <li class="js-scroll fade-in-bottom">
             <a href="dmis.html">
               <img src="images/dmis.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1146281021806104393"
-              target="_blank"
-            >
-              <img src="images/game-loop.webp" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
