--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
           </li>
           <li class="slide js-scroll fade-in-bottom">
             <a href="rdro.html">
-              <img src="images/rdro.png" alt="" class="zoom" />
+              <img src="images/e-pay.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="slide js-scroll fade-in-bottom">
             <a href="dmis.html">
-              <img src="images/dmis.png" alt="" class="zoom" />
+              <img src="images/juan-coffee-shop.png" alt="" class="zoom" />
             </a>
           </li>
 
