--- a/designs.html
+++ b/designs.html
@@ -99,6 +99,11 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
+            <a href="#" target="_blank">
+              <img src="images/hyperloop.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
             </a>
@@ -118,23 +123,10 @@
           </li>
           <li class="js-scroll fade-in-bottom">
             <a
-              href="https://www.figma.com/community/file/1133255596325295185"
-              target="_blank"
-            >
-              <img src="images/nft-web.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
               href="https://www.figma.com/community/file/1131172600454512315"
               target="_blank"
             >
               <img src="images/tiktok-mockup.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a href="https://www.figma.com/community/file/1069145923032887684">
-              <img src="images/rdro.webp" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
