--- a/show-case.html
+++ b/show-case.html
@@ -99,6 +99,11 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
+            <a href="#" target="_blank">
+              <img src="images/hyperloop.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
             </a>
@@ -114,14 +119,6 @@
               target="_blank"
             >
               <img src="images/everyday-blog.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1133255596325295185"
-              target="_blank"
-            >
-              <img src="images/nft-web.webp" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
