--- a/designs.html
+++ b/designs.html
@@ -104,6 +104,16 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
+            <a href="#" target="_blank">
+              <img src="images/everyday-blog.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a href="#" target="_blank">
+              <img src="images/tiktok-mockup.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
             </a>
@@ -111,46 +121,6 @@
           <li class="js-scroll fade-in-bottom">
             <a href="dmis.html">
               <img src="images/dmis.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1144148521460916668"
-              target="_blank"
-            >
-              <img src="images/everyday-blog.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1131172600454512315"
-              target="_blank"
-            >
-              <img src="images/tiktok-mockup.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1069146567302323589"
-              target="_blank"
-            >
-              <img src="images/violet-website.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1070261686949293814"
-              target="_blank"
-            >
-              <img src="images/calculator.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1071003083430970406"
-              target="_blank"
-            >
-              <img src="images/neon-music-player.webp" alt="" class="zoom" />
             </a>
           </li>
         </div>
