--- a/development.html
+++ b/development.html
@@ -71,8 +71,8 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="http://nhelez.me/" target="_blank">
-              <img src="images/advance-website.webp" alt="" class="zoom" />
+            <a href="https://nhel-ez.github.io/" target="_blank">
+              <img src="images/portfolio.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
