--- a/designs.html
+++ b/designs.html
@@ -74,42 +74,66 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.behance.net/gallery/164619423/Jem-Shop-E-commerce-App"
+              target="_blank"
+            >
               <img src="images/jem-shop.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.behance.net/gallery/164619643/E-Pay-Finance-App-Design"
+              target="_blank"
+            >
               <img src="images/e-pay.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.behance.net/gallery/164619843/E-Poultry-App-Design"
+              target="_blank"
+            >
               <img src="images/e-poultry.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.behance.net/gallery/164620057/Juan-Coffee-Shop-App-Design"
+              target="_blank"
+            >
               <img src="images/juan-coffee-shop.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.behance.net/gallery/164620277/Game-Loop-App-Design"
+              target="_blank"
+            >
               <img src="images/game-loop.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.behance.net/gallery/164620469/Hyperloop-NFT-Landing-Page-Design"
+              target="_blank"
+            >
               <img src="images/hyperloop.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.behance.net/gallery/164620703/Everyday-Blog-Landing-Page-Design"
+              target="_blank"
+            >
               <img src="images/everyday-blog.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.behance.net/gallery/164620867/Tiktok-Mockup-Design"
+              target="_blank"
+            >
               <img src="images/tiktok-mockup.png" alt="" class="zoom" />
             </a>
           </li>
