--- a/index.html
+++ b/index.html
@@ -127,17 +127,24 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.behance.net/gallery/164619423/Jem-Shop-E-commerce-App"
+              target="_blank"
+            >
               <img src="images/jem-shop.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="slide js-scroll fade-in-bottom">
-            <a href="rdro.html">
-              <img src="images/e-pay.png" alt="" class="zoom" />
+            <a
+              href="https://www.behance.net/gallery/164619843/E-Poultry-App-Design"
+            >
+              <img src="images/e-poultry.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="slide js-scroll fade-in-bottom">
-            <a href="dmis.html">
+            <a
+              href="https://www.behance.net/gallery/164620057/Juan-Coffee-Shop-App-Design"
+            >
               <img src="images/juan-coffee-shop.png" alt="" class="zoom" />
             </a>
           </li>
