--- a/index.html
+++ b/index.html
@@ -16,6 +16,58 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
   <head> </head>
   <body>
+    <div class="stars">
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+    </div>
     <div class="header">
       <li class="logo">
         <a href="index.html">
@@ -79,13 +131,13 @@
               </a>
             </div>
           </span>
-          <span class="scroll-caption scroll-element js-scroll fade-in">
+          <div class="scroll-caption scroll-element js-scroll fade-in">
             <img
               src="images/hero-image.png"
               alt=""
               class="hero scroll-element js-scroll slide-left"
             />
-          </span>
+          </div>
         </section>
       </center>
     </div>
@@ -137,6 +189,7 @@
           <li class="slide js-scroll fade-in-bottom">
             <a
               href="https://www.behance.net/gallery/164619843/E-Poultry-App-Design"
+              target="_blank"
             >
               <img src="images/e-poultry.png" alt="" class="zoom" />
             </a>
@@ -191,7 +244,7 @@
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 20px"
           >
-            What is UI Designs?
+            UI Design
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
             The user interface is the graphical layout of an application. It
@@ -207,7 +260,7 @@
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 20px"
           >
-            What is UX Designs?
+            UX Design
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
             A user's experience of the app is determined by how they interact
@@ -225,7 +278,7 @@
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 20px"
           >
-            What is Web Development?
+            Web Development
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
             Web development refers in general to the tasks associated with
