--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
         />
         <span
           class="scroll-caption scroll-element js-scroll fade-in"
-          style="color: gray; font-weight: 50"
+          style="color: rgb(199, 199, 199); font-weight: 50"
         >
           <br /><br />
           I currently live here in Laguna, Philippines. I studied Bachelor of
