--- a/about.html
+++ b/about.html
@@ -187,6 +187,9 @@
             <li><img src="images/github-white.webp" alt="" /></li>
             <li><img src="images/xampp.webp" alt="" /></li>
             <li><img src="images/phpmyadmin.webp" alt="" /></li>
+            <li><img src="images/loom.png" alt="" /></li>
+            <li><img src="images/slack.png" alt="" /></li>
+            <li><img src="images/clickup-logo-gradient.png" alt="" /></li>
           </div>
           <p
             class="js-scroll fade-in"
