--- a/dmis.html
+++ b/dmis.html
@@ -133,7 +133,7 @@
 
     <section class="scroll-container">
       <img
-        src="images/color-dmis.webp"
+        src="images/Colors DMIS.png"
         alt=""
         class="scroll-element js-scroll fade-in-bottom"
       />
@@ -149,7 +149,7 @@
 
     <section class="scroll-container">
       <img
-        src="images/nunito.webp"
+        src="images/Typography DMIS.png"
         alt=""
         class="scroll-element js-scroll fade-in-bottom"
       />
@@ -165,7 +165,7 @@
 
     <section class="scroll-container">
       <img
-        src="images/dmis-logo.webp"
+        src="images/Logo DMIS.png"
         alt=""
         class="scroll-element js-scroll fade-in-bottom"
       />
