--- a/rdro.html
+++ b/rdro.html
@@ -133,7 +133,7 @@
 
     <section class="scroll-container">
       <img
-        src="images/color-rdro-riders.webp"
+        src="images/Colors RDRO Blue.png"
         alt=""
         class="scroll-element js-scroll fade-in-bottom"
       />
@@ -150,7 +150,7 @@
 
     <section class="scroll-container">
       <img
-        src="images/color-rdro-admin.webp"
+        src="images/Colors RDRO Red.png"
         alt=""
         class="scroll-element js-scroll fade-in-bottom"
       />
@@ -167,7 +167,7 @@
 
     <section class="scroll-container">
       <img
-        src="images/open-sans.webp"
+        src="images/Typography RDRO.png"
         alt=""
         class="scroll-element js-scroll fade-in-bottom"
       />
@@ -184,7 +184,7 @@
 
     <section class="scroll-container">
       <img
-        src="images/rdro-logo.webp"
+        src="images/Logo RDRO.png"
         alt=""
         class="scroll-element js-scroll fade-in-bottom"
       />
