--- a/designs.html
+++ b/designs.html
@@ -119,6 +119,14 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.behance.net/gallery/165184457/Shopme-App-Design?"
+              target="_blank"
+            >
+              <img src="images/shopme.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.behance.net/gallery/161829513/Coin-World-Cryptocurrency-UIUX-Mockups"
               target="_blank"
             >
