--- a/index.html
+++ b/index.html
@@ -172,6 +172,14 @@
         <div class="img1">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.behance.net/gallery/165184457/Shopme-App-Design?"
+              target="_blank"
+            >
+              <img src="images/shopme.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.behance.net/gallery/161829513/Coin-World-Cryptocurrency-UIUX-Mockups"
               target="_blank"
             >
@@ -184,14 +192,6 @@
               target="_blank"
             >
               <img src="images/jem-shop.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="slide js-scroll fade-in-bottom">
-            <a
-              href="https://www.behance.net/gallery/164619843/E-Poultry-App-Design"
-              target="_blank"
-            >
-              <img src="images/e-poultry.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="slide js-scroll fade-in-bottom">
