--- a/index.html
+++ b/index.html
@@ -16,58 +16,6 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
   <head> </head>
   <body>
-    <div class="stars">
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-    </div>
     <div class="header">
       <li class="logo">
         <a href="index.html">
@@ -170,6 +118,14 @@
           end product that met the client's needs.
         </h6>
         <div class="img1">
+          <li class="js-scroll fade-in-bottom">
+            <a
+              href="https://www.behance.net/gallery/165720891/WarZone-%28MOBA-Game-Design%29?"
+              target="_blank"
+            >
+              <img src="images/warzone.png" alt="" class="zoom" />
+            </a>
+          </li>
           <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.behance.net/gallery/165184457/Shopme-App-Design?"
