--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@
             </div>
           </span>
           <div class="scroll-caption scroll-element js-scroll fade-in">
-            <img
-              src="images/hero-image.png"
-              alt=""
-              class="hero scroll-element js-scroll slide-left"
-            />
+            <div class="container">
+              <div class="card">
+                <img
+                  src="images/hero-image.png"
+                  alt=""
+                  class="hero scroll-element js-scroll slide-left"
+                />
+              </div>
+            </div>
           </div>
         </section>
       </center>
