--- a/show-case.html
+++ b/show-case.html
@@ -67,6 +67,14 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.behance.net/gallery/166279041/iDMIS-Document-Managemet-Information-System?"
+              target="_blank"
+            >
+              <img src="images/warzone.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.behance.net/gallery/165720891/WarZone-%28MOBA-Game-Design%29?"
               target="_blank"
             >
