--- a/designs.html
+++ b/designs.html
@@ -70,7 +70,7 @@
               href="https://www.behance.net/gallery/166279041/iDMIS-Document-Managemet-Information-System?"
               target="_blank"
             >
-              <img src="images/warzone.png" alt="" class="zoom" />
+              <img src="images/idmis.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
