--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
     <div class="intro slide">
       <section class="scroll-container">
         <img
-          src="images/profile-pic.webp"
+          src="images/profile-pic.png"
           alt=""
           class="scroll-element js-scroll slide-left"
         />
