--- a/designs.html
+++ b/designs.html
@@ -67,6 +67,14 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.behance.net/gallery/174759129/iTravel-(Travel-Mobile-App)"
+              target="_blank"
+            >
+              <img src="images/iTravel.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.behance.net/gallery/166279041/iDMIS-Document-Managemet-Information-System?"
               target="_blank"
             >
