--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
         <div class="img1">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.behance.net/gallery/174759129/iTravel-(Travel-Mobile-App)"
+              target="_blank"
+            >
+              <img src="images/iTravel.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.behance.net/gallery/166279041/iDMIS-Document-Managemet-Information-System?"
               target="_blank"
             >
@@ -144,13 +152,6 @@
               target="_blank"
             >
               <img src="images/coin-world.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="slide js-scroll fade-in-bottom">
-            <a
-              href="https://www.behance.net/gallery/164620057/Juan-Coffee-Shop-App-Design"
-            >
-              <img src="images/juan-coffee-shop.png" alt="" class="zoom" />
             </a>
           </li>
 
