--- a/show-case.html
+++ b/show-case.html
@@ -202,23 +202,13 @@
         <h2>Let's Connect</h2>
         <div class="img3">
           <li>
-            <a href="https://www.facebook.com/nhelez04" target="_blank">
-              <img src="images/fb.webp" alt="" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/nhel_ez/" target="_blank">
-              <img src="images/instagram.webp" alt="" />
-            </a>
-          </li>
-          <li>
-            <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
+            <a href="mailto:leonelesguerra63@gmail.com" target="_blank">
               <img src="images/gmail.webp" alt="" />
             </a>
           </li>
           <li>
             <a
-              href="https://www.linkedin.com/in/leonel-esguerra-3a0801211"
+              href="https://www.linkedin.com/in/leonel-esguerra"
               target="_blank"
             >
               <img src="images/linkedin.webp" alt="" />
