--- a/about.html
+++ b/about.html
@@ -79,42 +79,19 @@
           style="color: rgb(199, 199, 199); font-weight: 50"
         >
           <br /><br />
-          I currently live here in Laguna, Philippines. I studied Bachelor of
-          Science in Computer Science. For the past four years of studying
-          Computer Science, I was interested in the field of designing and
-          developing websites and system. I love to see designs and I love to
-          convert my ideas into reality. I want to pursue my career in designs
-          and development of websites and system and practice my skill in the
-          industry.<br /><br />
-          In my early experience as an On-The-Job Trainee when I am Senior High
-          School and College and, I was involved in communicating with different
-          people, answering calls, accomplishing tasks, working with the team,
-          and work independently. In my experience as an On-The-Job Trainee at
-          DOST-FPRDI, I was assigned a role as a Frontend Developer. I am
-          responsible for designing and developing the user interface (UI) of
-          the system and preparing technical documentation. Being an OJT, I was
-          also responsible to assist other employees in terms of technical
-          aspects, attending seminars, answering calls and preparing weekly
-          accomplishment reports.
-          <br /><br />
-          Currently, as a UI/UX Designer at Daily Social Studio, I have had the
-          opportunity to hone my skills in various areas of design. My primary
-          focus has been on UX research, where I have gained valuable experience
-          in conducting competitors analysis and creating user flows. In
-          addition to that, I have also dabbled in game design, web design, app
-          design, and WordPress design, which have provided me with a diverse
-          range of design challenges and allowed me to expand my skillset. In my
-          role, I have been involved in designing and prototyping various web
-          and mobile applications, working closely with developers to ensure
-          that the final product meets the needs of our users. I have also
-          contributed to the development of our company's WordPress website,
-          creating custom designs and implementing them using WordPress themes
-          and plugins. Overall, working at Daily Social Studio has allowed me to
-          gain practical experience in various aspects of design and has
-          provided me with opportunities to work on exciting projects with a
-          talented and dedicated team. I look forward to continuing to develop
-          my skills as a UI/UX Designer and contributing to the success of the
-          company.
+          Meet Leonel Esguerra short for “Leo”, a visionary UI/UX Designer who
+          crafts captivating digital experiences that bridge the gap between
+          aesthetics and functionality. With a meticulous eye for detail and a
+          deep understanding of user-centered design principles, Leo brings
+          ideas to life by seamlessly blending intuitive interfaces with
+          stunning visual designs. Armed with a passion for human-centric
+          design, Leo possesses a unique ability to empathize with users,
+          ensuring every interaction is an effortless and delightful journey.
+          Whether it's wireframing, prototyping, or creating pixel-perfect
+          designs, Leo combines innovation, user research, and a touch of magic
+          to create impactful and memorable experiences that leave users craving
+          more. Embrace the art of digital storytelling and let Leo transform
+          your ideas into engaging and immersive user experiences.
         </span>
       </section>
 
@@ -179,11 +156,8 @@
               </a>
             </li>
             <li>
-              <a
-                href="https://www.linkedin.com/in/leonel-esguerra"
-                target="_blank"
-              >
-                <img src="images/linkedin.webp" alt="" />
+              <a href="https://dribbble.com/leonelesguerra" target="_blank">
+                <img src="images/dribbble.svg" alt="" />
               </a>
             </li>
             <li>
