--- a/index.html
+++ b/index.html
@@ -335,11 +335,8 @@
             </a>
           </li>
           <li>
-            <a
-              href="https://www.linkedin.com/in/leonel-esguerra"
-              target="_blank"
-            >
-              <img src="images/linkedin.webp" alt="" />
+            <a href="https://dribbble.com/leonelesguerra" target="_blank">
+              <img src="images/dribbble.svg" alt="" />
             </a>
           </li>
           <li>
